tests/baselines/reference/arrowFunctionWithParameterNameAsync_es6(strict=true).errors.txt
arrowFunctionWithParameterNameAsync_es6.ts(1,11): error TS7006: Parameter 'async' implicitly has an 'any' type.


==== arrowFunctionWithParameterNameAsync_es6.ts (1 errors) ====
    const x = async => async;
              ~~~~~
!!! error TS7006: Parameter 'async' implicitly has an 'any' type.